[gd_scene load_steps=4 format=3 uid="uid://cnso5mc8u0d8d"]

[ext_resource type="Script" uid="uid://dq07aiew0abt8" path="res://movible.gd" id="1_hmyf8"]
[ext_resource type="Texture2D" uid="uid://dpotlg450ma2h" path="res://icon.svg" id="2_arqyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5n71v"]
size = Vector2(120, 122)

[node name="movible" type="Node2D"]
script = ExtResource("1_hmyf8")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2_arqyp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_5n71v")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
